release/ingress/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gtr
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: gtr-auth-service
                port:
                  number: 8080
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: gtr-auth-service
                port:
                  number: 8080
